<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>sk.vracon.sqlcomments</groupId>
	<artifactId>sqlcomments</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>SQL Comments Parent POM</name>
	<description>SQL Comments is a Java framework to extract and run SQL
		statements stored in Java comments.</description>
	<url>http://www.sqlcomments.org/</url>
	<inceptionYear>2014</inceptionYear>
	<organization>
		<name>Vracon s.r.o.</name>
		<url>http://www.vracon.sk</url>
	</organization>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>

	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<scm>
		<connection>scm:git:https://github.com/jurajbak/sqlcomments.git</connection>
		<url>https://github.com/jurajbak/sqlcomments</url>
	</scm>

	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/jurajbak/sqlcomments/issues</url>
	</issueManagement>

	<developers>
		<developer>
			<name>Juraj Bak</name>
			<email>sqlcomments@vracon.sk</email>
			<organization>Vracon s.r.o.</organization>
			<organizationUrl>http://www.vracon.sk</organizationUrl>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<dependency.version.antlr>4.13.2</dependency.version.antlr>
		<dependency.version.freemarker>2.3.34</dependency.version.freemarker>
		<dependency.version.graalvm>23.0.10</dependency.version.graalvm>
		<dependency.version.hsqldb>2.7.3</dependency.version.hsqldb>
		<dependency.version.junit>4.13.2</dependency.version.junit>
		<dependency.version.mariadb>3.5.7</dependency.version.mariadb>
		<dependency.version.mysql>9.5.0</dependency.version.mysql>
		<dependency.version.ojdbc>21.9.0.0</dependency.version.ojdbc>
		<dependency.version.pgjdbc>42.7.8</dependency.version.pgjdbc>
		<dependency.version.slf4japi>2.0.12</dependency.version.slf4japi>
		<dependency.version.spring>6.2.15</dependency.version.spring>
		<dependency.version.testcontainers>2.0.3</dependency.version.testcontainers>
	</properties>

	<modules>
		<module>core</module>
		<module>maven</module>
		<module>spring</module>
		<module>testdb</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>external.atlassian.jgitflow</groupId>
				<artifactId>jgitflow-maven-plugin</artifactId>
				<version>1.0-m3</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<enableFeatureVersions>true</enableFeatureVersions>
					<keepBranch>false</keepBranch>
					<pushFeatures>false</pushFeatures>
					<pushHotfixes>false</pushHotfixes>
					<pushReleases>false</pushReleases>

					<noDeploy>true</noDeploy>
					<noFeatureBuild>true</noFeatureBuild>
					<pullMaster>true</pullMaster>
					<pullDevelop>true</pullDevelop>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release-artifacts</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.12.0</version>
						<executions>
							<execution>
								<id>attach-javadoc</id>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<excludePackageNames>
								sk.vracon.sqlcomments.maven.ecmascript,sk.vracon.sqlcomments.maven.java,sk.vracon.sqlcomments.maven.sql,sk.vracon.sqlcomments.maven.sqlcomments</excludePackageNames>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.4.0</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<phase>package</phase>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.graalvm.js</groupId>
				<artifactId>js</artifactId>
				<version>${dependency.version.graalvm}</version>
			</dependency>
			<dependency>
				<groupId>org.graalvm.js</groupId>
				<artifactId>js-scriptengine</artifactId>
				<version>${dependency.version.graalvm}</version>
			</dependency>

			<dependency>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4</artifactId>
				<version>${dependency.version.antlr}</version>
			</dependency>

			<dependency>
				<groupId>org.freemarker</groupId>
				<artifactId>freemarker</artifactId>
				<version>${dependency.version.freemarker}</version>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${dependency.version.junit}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${dependency.version.slf4japi}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${dependency.version.slf4japi}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${dependency.version.slf4japi}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${dependency.version.spring}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${dependency.version.spring}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${dependency.version.spring}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${dependency.version.spring}</version>
			</dependency>

			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-oracle-free</artifactId>
				<version>${dependency.version.testcontainers}</version>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-mysql</artifactId>
				<version>${dependency.version.testcontainers}</version>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-mariadb</artifactId>
				<version>${dependency.version.testcontainers}</version>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-postgresql</artifactId>
				<version>${dependency.version.testcontainers}</version>
			</dependency>
			<dependency>
				<groupId>org.hsqldb</groupId>
				<artifactId>hsqldb</artifactId>
				<version>${dependency.version.hsqldb}</version>
			</dependency>
			<dependency>
				<groupId>com.oracle.database.jdbc</groupId>
				<artifactId>ojdbc11</artifactId>
				<version>${dependency.version.ojdbc}</version>
			</dependency>
			<dependency>
				<groupId>com.mysql</groupId>
				<artifactId>mysql-connector-j</artifactId>
				<version>${dependency.version.mysql}</version>
			</dependency>
			<dependency>
				<groupId>org.mariadb.jdbc</groupId>
				<artifactId>mariadb-java-client</artifactId>
				<version>${dependency.version.mariadb}</version>
			</dependency>
			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>${dependency.version.pgjdbc}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>